test_case/rust-lang_rust/67037_561933472.rs
rust
struct U {}
struct P<T>(T);

fn main() {
    let P() = U {}; //~ ERROR mismatched types
}
